# specs

./: .gitignore  ARCHITECTURE.md  LICENSE  README_API.md  pyproject.toml  specs.code-workspace
app/api/: api.py
app/api/v1/: auth.py
app/core/: database.py
app/models/: auth.py
app/services/: auth_service.py
specs-api/: .env.example  CLEAN_ARCHITECTURE.md  DATABASE_SETUP.md  GITHUB_SETUP.md  README.md  SCOPES.md  clear_database.py  clear_database.sh  docker-compose.yml  init.sql  main.py  pyproject.toml  run_tests.sh
specs-api/app/api/: api.py
specs-api/app/api/v1/: auth.py  environment.py
specs-api/app/core/: database.py  database_factory.py  postgres_database.py  security.py
specs-api/app/models/: auth.py  environment.py
specs-api/app/services/: auth_service.py  env_service.py
specs-api/tests/: README.md  run_tests.sh  test_auth.py  test_environment_standalone.py  test_environment_variables.py  test_scope_management.py
specs-cli/: .eslintrc.js  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
specs-cli/src/: index.ts
specs-cli/src/__tests__/: index.test.ts
tests/: test_auth.py
